--- a/colleger/templates/colleger/chanmes.html
+++ b/colleger/templates/colleger/chanmes.html
@@ -1,14 +1,14 @@
 
-{% extends "appraise/index_base.html" %}
+{% extends "colleger/index_base.html" %}
 {% load static %}
 {% block mainbody %}
 
-    <link href="{% static 'appraise/assets/css/bootstrap.min.css' %}" rel="stylesheet" />
+     <link href="{% static 'appraise/assets/css/bootstrap.min.css' %}" rel="stylesheet" />
     <link href="{% static 'appraise/bootstrap3-editable/css/bootstrap-editable.css' %}" rel="stylesheet" />
     <link href="{% static 'appraise/bootstrap-table/css/bootstrap-table.min.css' %}" rel="stylesheet" />
 
 <script src="{% static 'appraise/assets/js/jquery-2.0.3.min.js' %}"></script>
-<script src="{% static 'appraise/assets/bootstrap3/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'appraise/assets/js/bootstrap.min.js' %}"></script>
 <script src="{% static 'appraise/bootstrap3-editable/js/bootstrap-editable.min.js' %}"></script>
 <script src="{% static 'appraise/bootstrap-table/js/bootstrap-table.min.js' %}"></script>
 <script src="{% static 'appraise//bootstrap-table/js/bootstrap-table-zh-CN.min.js' %}"></script>
@@ -40,42 +40,50 @@ margin:0;
 			<h3 class="panel-title text-center">更改个人信息</h3>
 		 </div>
 	<div class="panel-body">
-	<form class="form-horizontal" role="form">
+	<form class="form-horizontal" role="form" method="post" action="/colleger/mesconfirm/">
+		{% csrf_token %}
 		<div class="form-group" id="username">
-			<label for="username" class="col-sm-4 control-label">用户名</label>
+			<label class="col-sm-4 control-label">用户名</label>
 			<div class="col-sm-8">
 		<!--	<input type="text" class="form-control" id="uusername" name="uusername">-->
-			<label for="uusername" class="col-sm-2  control-label">xuzhen</label>
+			<label class="col-sm-2  control-label">{{ contacts.username }}</label>
 			</div>
 		</div>
 		<div class="form-group" id="name">
-			<label for="uusername" class="col-sm-4 control-label">姓名</label>
+			<label class="col-sm-4 control-label">姓名</label>
 			<div class="col-sm-8">
-			<label for="uusername" class="col-sm-2 control-label">xuzhen</label>
+			<label class="col-sm-2 control-label">{{ contacts.name }}</label>
 			</div>
 		</div>
 		<div class="form-group" id="age">
-			<label for="uusername" class="col-sm-4 control-label">年龄</label>
+			<label class="col-sm-4 control-label">年龄</label>
 			<div class="col-sm-8">
-			<label for="uusername" class="col-sm-2 control-label" id="username">xuzhen</label>
+			<label class="col-sm-2 control-label">{{ contacts.age }}</label>
 			</div>
 		</div>
 		<div class="form-group" id="idnumber">
-			<label for="uusername" class="col-sm-4 control-label">学号</label>
+			<label class="col-sm-4 control-label">学号</label>
 			<div class="col-sm-8">
-			<label for="uusername" class="col-sm-2 control-label" id="username">xuzhen</label>
+			<label class="col-sm-2 control-label">{{ contacts.username }}</label>
 			</div>
 		</div>
 		<div class="form-group" id="sex">
-			<label for="uusername" class="col-sm-4 control-label">性别</label>
+			<label class="col-sm-4 control-label">性别</label>
 			<div class="col-sm-8">
-			<label for="uusername" class="col-sm-2 control-label" id="username">xuzhen</label>
+			<label class="col-sm-2 control-label">
+			{% ifequal contacts.sex 0 %}
+				女
+			{% else %}
+				男
+			{% endifequal %}
+			
+			</label>
 			</div>
 		</div>
 		<div class="form-group" id="email">
 			<label for="uusername" class="col-sm-4 control-label">邮箱</label>
 			<div class="col-sm-8">
-			<label for="uusername" class="col-sm-2 control-label" id="username">xuzhen</label>
+			<label for="uusername" class="col-sm-2 control-label">{{ contacts.email }}</label>
 			</div>
 		</div>
 		<div id="center"> 
@@ -86,29 +94,69 @@ margin:0;
 		 </div>
 	</form>
 
+	<!--提示模拟框-->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="deModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+					&times;
+				</button>
+				<h4 class="modal-title" id="deModalLabel">
+					提示
+				</h4>
+			</div>
+			<div class="modal-body">
+				<span id="message"></span>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">关闭
+				</button>
+			</div>
+		</div><!-- /.modal-content -->
+	</div><!-- /.modal -->
+</div>
 
- </div>
+
+	{% if messages %}
+	<script>
+    {% for msg in messages %}
+		$('#message').html('{{ msg.message }}');
+		$('#myModal').modal();
+        
+    {% endfor %}
+	</script>
+	{% endif %}
+
+	</div> 
+ 
+ </div> 
+</div>
  
  <script>
+
  $('#update').click(function(){
-	$('#username').html('<label for="username" class="col-sm-2 control-label">用户名</label><div class="col-sm-10"><input type="text" class="form-control" name="username"></div>');
-	$('#name').html('<label for="name" class="col-sm-2 control-label">姓名</label><div class="col-sm-10"><input type="text" class="form-control" name="name"></div>');
-	$('#age').html('<label for="age" class="col-sm-2 control-label">年龄</label><div class="col-sm-10"><input type="text" class="form-control" name="age"></div>');
-	$('#idnumber').html('<label for="idnumber" class="col-sm-2 control-label">工号</label><div class="col-sm-10"><input type="text" class="form-control" name="idnumber"></div>');
-	$('#sex').html('<div class="form-group" id="sex-unique"><label for="sex" class="col-sm-2 control-label">性别</label><div class="col-sm-10"><select class="form-control" name="sex"><option selected>&nbsp;&nbsp;&nbsp;&nbsp;请选择</option><option value="1">&nbsp;&nbsp;&nbsp;&nbsp;男</option><option value="0">&nbsp;&nbsp;&nbsp;&nbsp;女</option></select></div></div>');
-	$('#email').html('<label for="email" class="col-sm-2 control-label">邮箱</label><div class="col-sm-10"><input type="email" class="form-control" name="email"></div>');
+	$('#username').html('<label for="username" class="col-sm-2 control-label">用户名</label><div class="col-sm-10"><input type="text" class="form-control" name="username" value="{{ contacts.username }}"></div>');
+	$('#name').html('<label for="name" class="col-sm-2 control-label">姓名</label><div class="col-sm-10"><input type="text" class="form-control" name="name" value="{{ contacts.name }}"></div>');
+	$('#age').html('<label for="age" class="col-sm-2 control-label">年龄</label><div class="col-sm-10"><input type="text" class="form-control" name="age"  value="{{ contacts.age }}"></div>');
+	$('#idnumber').html('<label for="idnumber" class="col-sm-2 control-label">工号</label><div class="col-sm-10"><input type="text" class="form-control" name="idnumber" value="{{ contacts.idnumber }}"></div>');
+	$('#sex').html('<div class="form-group" id="sex-unique"><label for="sex" class="col-sm-2 control-label">性别</label><div class="col-sm-10"><select class="form-control" name="sex" id="select"><option selected>&nbsp;&nbsp;&nbsp;&nbsp;请选择</option><option value="1">&nbsp;&nbsp;&nbsp;&nbsp;男</option><option value="0">&nbsp;&nbsp;&nbsp;&nbsp;女</option></select></div></div>');
+	$('#email').html('<label for="email" class="col-sm-2 control-label">邮箱</label><div class="col-sm-10"><input type="email" class="form-control" name="email" value="{{ contacts.email }}"></div>');
 	
+	//判断男女
+　　if({{ contacts.sex }} == 0){
+    　　$('#select').val(0);
+　　}else{
+		$('#select').val(1);
+	}
 	//确认框
-	$('#center').html('<div class="btn-group"><a  type="button" class="btn btn-default"  href="/appraise/confirm"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>确认</a></div><div class="btn-group"><a  type="button" class="btn btn-default"  href="/appraise/chanmes"  style="margin-left:20px;"><span class="glyphicon glyphicon-retweet" aria-hidden="true"></span>返回</a></div>');
+	$('#center').html('<div class="btn-group"><button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>确认</button></div><div class="btn-group"><a  type="button" class="btn btn-default"  href="/colleger/chanmes"  style="margin-left:20px;"><span class="glyphicon glyphicon-retweet" aria-hidden="true"></span>返回</a></div>');
+ 
+
  });
  
  
- //字符串生成
- //function createString(nickname,name)
- //{
-	//var html = 
-	//return 
- //}
+
  </script>
  
  {% endblock %}
