--- a/colleger/templates/colleger/chanpas.html
+++ b/colleger/templates/colleger/chanpas.html
@@ -1,17 +1,14 @@
 
-{% extends "appraise/index_base.html" %}
+{% extends "colleger/index_base.html" %}
 {% load static %}
 {% block mainbody %}
 
-    <link href="{% static 'appraise/assets/css/bootstrap.min.css' %}" rel="stylesheet" />
-    <link href="{% static 'appraise/bootstrap3-editable/css/bootstrap-editable.css' %}" rel="stylesheet" />
-    <link href="{% static 'appraise/bootstrap-table/css/bootstrap-table.min.css' %}" rel="stylesheet" />
-
-<script src="{% static 'appraise/assets/js/jquery-2.0.3.min.js' %}"></script>
-<script src="{% static 'appraise/assets/bootstrap3/js/bootstrap.min.js' %}"></script>
+ <script src="{% static 'appraise/assets/js/jquery-2.0.3.min.js' %}"></script>
+<script src="{% static 'appraise/assets/js/bootstrap.min.js' %}"></script>
 <script src="{% static 'appraise/bootstrap3-editable/js/bootstrap-editable.min.js' %}"></script>
 <script src="{% static 'appraise/bootstrap-table/js/bootstrap-table.min.js' %}"></script>
-<script src="{% static 'appraise//bootstrap-table/js/bootstrap-table-zh-CN.min.js' %}"></script>
+<script src="{% static 'appraise/bootstrap-table/js/bootstrap-table-zh-CN.min.js' %}"></script>
+
 <style>
 td,th{
    vertical-align: middle;
@@ -21,7 +18,7 @@ td,th{
 margin:0 auto;
 }
 .form-group{
-	margin:30px 0;
+	margin:20px 0;
 }
 .form-control{
 	width:400px;
@@ -30,6 +27,11 @@ margin:0 auto;
  margin:0 auto;
  width:450px;
 }
+.form-group span{
+color:red;
+margin-top:3px;
+float:left;
+}
 </style>
 <div class="col-sm-8">
 	 <div class="panel panel-default">
@@ -37,30 +39,34 @@ margin:0 auto;
 			<h3 class="panel-title text-center">更改个人密码</h3>
 		 </div>
 	<div class="panel-body">
-	<form class="form-horizontal" role="form">
+	<form class="form-horizontal" action="/colleger/pasconfirm/" method="post">
+	 {% csrf_token %}
 		<div class="form-group">
-			<label for="uusername" class="col-sm-2 control-label">原始密码</label>
+			<label for="ancent" class="col-sm-2 control-label">原始密码</label>
 			<div class="col-sm-10">
-			<input type="password" class="form-control" id="uusername" name="uusername">
+			<input type="password" class="form-control" id="ancent" name="ancent" required>
+			<span id="spanancent">&nbsp;<span>
 			</div>
 		</div>
 		<div class="form-group">
-			<label for="uusername" class="col-sm-2 control-label">修改密码</label>
+			<label for="update" class="col-sm-2 control-label">修改密码</label>
 			<div class="col-sm-10">
-			<input type="password" class="form-control" id="uusername" name="uusername">
+			<input type="password" class="form-control" id="update" name="update" required>
+			<span id="spanupdate">&nbsp;<span>
 			</div>
 		</div>
 		<div class="form-group">
-			<label for="uusername" class="col-sm-2 control-label">确认密码</label>
+			<label for="confirm" class="col-sm-2 control-label">确认密码</label>
 			<div class="col-sm-10">
-			<input type="password" class="form-control" id="uusername" name="uusername">
+			<input type="password" class="form-control" id="confirm" name="confirm" required>
+			<span id="spanconfirm">&nbsp;<span>
 			</div>
 		</div>
 		
 		<div id="center"> 
 			<div class="btn-group">
-				 <a   type="button" class="btn btn-default"  href="/appraise/studentUpdate?id={{ contact.id }}">
-				 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>修改</a>
+				 <button type="submit" class="btn btn-default"  id="btupdate">
+				 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>修改</button>
 			 </div>
 			 <div class="btn-group">
 				 <button   type="reset" class="btn btn-default" style="margin-left:20px;">
@@ -68,11 +74,104 @@ margin:0 auto;
 			 </div>
 		 </div>
 	</form>
+	
+	
+		<!--提示模拟框-->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="deModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+					&times;
+				</button>
+				<h4 class="modal-title" id="deModalLabel">
+					提示
+				</h4>
+			</div>
+			<div class="modal-body">
+				<span id="message"></span>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">关闭
+				</button>
+			</div>
+		</div><!-- /.modal-content -->
+	</div><!-- /.modal -->
+</div>
 
 
+	{% if messages %}
+	<script>
+    {% for msg in messages %}
+		$('#message').html('{{ msg.message }}');
+		$('#myModal').modal();
+
+    {% endfor %}
+	</script>
+	{% endif %}
+	
+	
+	</div>
 
 
-
+	
+	
+	
  </div>
+</div>
+ 
+  <script>
+ $(function(){
+
+
+	$('#ancent').bind('input propertychange', function () {
+            if(this.value.length <=5)
+			$('#spanancent').html('原始密码不能小于5位!');
+			else
+			$('#spanancent').html('&nbsp;');
+			return false;
+        });
+	
+	$('#ancent').blur(function(){
+			if($('#ancent').val() == '')
+			$('#spanancent').html('原始密码不能为空!');
+	});
+	
+	$('#update').bind('input propertychange', function () {
+            if(this.value.length <=5)
+			$('#spanupdate').html('修改密码不能小于5位!');
+			else
+			$('#spanupdate').html('&nbsp;');
+        });
+	
+	$('#update').blur(function(){
+			if($('#update').val() == '')
+			$('#spanupdate').html('修改密码不能为空!');
+			if($('#ancent').val() == $('#update').val())
+			$('#spanupdate').html('修改密码和原始密码不能一致!');
+	});
+	
+	$('#confirm').bind('input propertychange', function () {
+            if(this.value != $('#update').val())
+			$('#spanconfirm').html('确认密码和修改密码不一致!');
+			else
+			$('#spanconfirm').html('&nbsp;');
+        });
+	
+	$('#confirm').blur(function(){
+			if($('#confirm').val() == '')
+			$('#spanconfirm').html('确认密码不能为空!');
+	});
+	
+	
+	$('#btupdate').click(function(){
+	
+	
+	});
+
+});
+ 
+ 
+ </script>
  
  {% endblock %}
