--- a/appraise/templates/appraise/index_base.html
+++ b/appraise/templates/appraise/index_base.html
@@ -66,7 +66,7 @@
                             </h4>
                         </div>
                         <!-- .panel-collapse和.collapse标明折叠元素 .in表示要显示出来 -->
-                        <div id="collapseListGroup1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="collapseListGroupHeading1">
+                        <div id="collapseListGroup1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="collapseListGroupHeading1">
                             <ul class="list-group">
                               <li class="list-group-item">
                                 <!-- 利用data-target指定URL -->
