--- a/appraise/templates/appraise/sanction.html
+++ b/appraise/templates/appraise/sanction.html
@@ -44,6 +44,8 @@ td,th{
 	
 <thead>
 		<tr>
+			<th data-visible="false">id</th>
+			<th data-visible="false">user</th>
 			<th>姓名</th>
 			<th>类别</th>
 			<th>级别</th>
@@ -56,7 +58,8 @@ td,th{
 	<tbody>
 {% for contact in contacts %}
 		<tr>
-		
+	<td>{{ contact.id }}</td>
+	<td>{{ contact.user }}</td>
     <td>{{ contact.name }}</td>  
    <td>
 {% if contact.category == 0 %}
@@ -135,8 +138,9 @@ td,th{
 					<div class="col-sm-10">
 					<select class="form-control" id="aname" name="aname">
 					<option selected = "selected">&nbsp;&nbsp;&nbsp;&nbsp;请选择--</option>
-					 {% for contact in contacts %}
-						<option value ="{{ contact.id }}">&nbsp;&nbsp;&nbsp;&nbsp;{{ contact.name }}</option>
+					 {% for nickname in user %}
+						<option value ="{{ nickname.id }}">&nbsp;&nbsp;&nbsp;&nbsp;{{ nickname.name }}</option>
+						<!-- 去重 -->
 						{% endfor %}
 					</select>
 					</div>
@@ -202,14 +206,14 @@ td,th{
 			</div>
 			<div class="modal-body">
 			
-			<form class="form-horizontal" role="form" action="/appraise/stupdate/" method="post">
+			<form class="form-horizontal" role="form" action="/appraise/sanpdate/" method="post">
 				{% csrf_token %}
 				<div class="form-group">
 					<label for="uname" class="col-sm-2 control-label">姓名</label>
 					<div class="col-sm-10">
 					  <select class="form-control" id="uname" name="uname">
-						{% for contact in contacts %}
-						<option value ="{{ contact.id }}">&nbsp;&nbsp;&nbsp;&nbsp;{{ contact.name }}</option>
+						{% for nickname in user %}
+						<option value ="{{ nickname.id }}">&nbsp;&nbsp;&nbsp;&nbsp;{{ nickname.name }}</option>
 						{% endfor %}
 						</select>
 					</div>
@@ -217,7 +221,7 @@ td,th{
 				  <div class="form-group">
                 <label for="utime" class="col-sm-2 control-label">时间</label>
                 <div class="input-group date form_datetime col-md-10" data-date="1979-09-16T05:25:07Z" data-date-format="dd MM yyyy - HH:ii p" data-link-field="dtp_input1">
-                    <input type="text" class="form-control" value="" readonly name="utime">
+                    <input type="text" class="form-control" value="" readonly name="utime" id="udate">
                     <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
 					<span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
                 </div>
@@ -278,7 +282,7 @@ td,th{
 			<div class="modal-body">
 			你确定要删除该条信息吗?
 			</div>
-			<form action="/appraise/studel/" method="post">
+			<form action="/appraise/sandel/" method="post">
 			{% csrf_token %}
 			<input type="hidden" id="delid" name="delid">
 			<div class="modal-footer">
@@ -351,17 +355,51 @@ $("#acategory").change(function(){
 $("#table").on("click-row.bs.table",function(e,row,ele){
 $(".danger").removeClass("danger");
 $(ele).addClass("danger");
-$("")
+
 console.log(row);
 //赋值
 $("input").val(''); 
 $("#upid").val(row[0]);//修改赋ID
 $("#delid").val(row[0]);//删除赋ID
+//此时id选择错误
 $("#uname").val(row[1]); //姓名
-$("#udate").val(row[4]);//时间
-$("#ucategory").val(row[1]);//类别
-$("#ureason").val(row[3]);//原因
+//$("#uname").find("option[text='"+row[1]+"']").attr("selected", true);
 
+
+$("#udate").val(row[6]);//时间
+//类别
+var sear=new RegExp('惩罚');
+　　if(sear.test(row[3])){
+    　　$("#ucategory").val(1);
+　　}else{
+		$("#ucategory").val(0);
+	}
+  $("#ulevel").empty();
+  if($("#ucategory").val() == 0)
+	$("#ulevel").append( '<option value="0">校级教学奖</option><option value="1">省级奖学金</option><option value="1">国家奖学金</option>' );
+  else if($("#ucategory").val() == 1)
+	$("#ulevel").append( '<option value="0">批评教育</option><option value="1">全校通报</option><option value="1">留校查看</option><option value="2">热令退学</option>' );
+  else
+	$("#ulevel").append( '<option >请选择--</option>' );
+if($("#ucategory").val(1)){
+	if((new RegExp('批评教育')).test(row[4])) $("#ulevel").val(0);
+	if((new RegExp('全校通报')).test(row[4])) $("#ulevel").val(1);
+	if((new RegExp('留校查看')).test(row[4])) $("#ulevel").val(2);
+	if((new RegExp('热令退学')).test(row[4])) $("#ulevel").val(3);　
+}else{
+	if((new RegExp('校级奖学金')).test(row[4])) $("#ulevel").val(0);
+	if((new RegExp('省级奖学金')).test(row[4])) $("#ulevel").val(1);
+	if((new RegExp('国家奖学金')).test(row[4])) $("#ulevel").val(2);
+}
+//$("#ulevel").val(row[3]);//级别
+$("#ureason").val(row[5]);//原因
+//id:3
+//姓名:22
+//时间;18 十二月 2017 - 10:14 下午
+//类别:惩罚
+//级别:热令退学
+//原因:负担
+//状态:未审核
 
 });
 
