--- a/appraise/templates/appraise/student.html
+++ b/appraise/templates/appraise/student.html
@@ -42,7 +42,7 @@ td,th{
 			<th>用户名</th>
 			<th>姓名</th>
 			<th>年龄</th>
-			<th>学号</th>
+			<th>身份证号码</th>
 			<th>性别</th>
 			<th>邮箱</th>
 			<th>操作</th>
@@ -114,7 +114,7 @@ td,th{
 					</div>
 				  </div>
 				  <div class="form-group">
-					<label for="aidnumber" class="col-sm-2 control-label">学号</label>
+					<label for="aidnumber" class="col-sm-2 control-label">身份证号码</label>
 					<div class="col-sm-10">
 					  <input type="text" class="form-control" id="aidnumber" name="aidnumber">
 					</div>
@@ -185,7 +185,7 @@ td,th{
 					</div>
 				  </div>
 				  <div class="form-group">
-					<label for="uidnumber" class="col-sm-2 control-label">学号</label>
+					<label for="uidnumber" class="col-sm-2 control-label">身份证号码</label>
 					<div class="col-sm-10">
 					  <input type="text" class="form-control" id="uidnumber" name="uidnumber">
 					</div>
